--- a/beauty_salon/templates/call_me.html
+++ b/beauty_salon/templates/call_me.html
@@ -32,6 +32,8 @@
             <span class="contacts__form_checkboxBlock__intro">Я согласен(а) с политикой конфиденциальности</span>
         </div>
         <button type="submit" class="popup__btn authPopup__btn">Отправить</button>
+        <br>
+        <button type="button" class="popup__btn authPopup__btn" onclick="window.location.href='/'">Назад</button>
     </form>
 	</div>
 </body>
