--- a/beauty_salon/templates/index.html
+++ b/beauty_salon/templates/index.html
@@ -15,13 +15,6 @@
 	<link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
-	{% if messages %}
-		<ul class="messages">
-			{% for message in messages %}
-				<li class="{{ message.tags }}">{{ message }}</li>
-			{% endfor %}
-		</ul>
-	{% endif %}
 <body>
 	<section id="mobMenu">
 			<div class="mobMenu">
@@ -93,16 +86,16 @@
 								{% else %}
 									<img src="{% static 'img/acc.svg' %}" alt="account" class="header__account_img">
 								<span class="accaunt__ava_name">
-									<a href="{% url 'beauty_salon:notes' %}" >{{ user.username }}</a>
+									<a href="{% url 'beauty_salon:notes' %}" class="menu__item_link">{{ user.username }}</a>
 								</span>
 								{% endif %}
 							</div>
 						{% else %}
 						<div class="header__block">
 						<a href="{% url 'beauty_salon:call_me' %}"><button class="header__block_btn">Перезвоните мне</button></a>
-							<a href="{% url 'beauty_salon:register' %}">Регистрация</a>
+							<a href="{% url 'beauty_salon:register' %}" class="menu__item_link">Регистрация</a>
 							<img src="{% static 'img/acc.svg' %}" alt="account" class="header__account_img">
-							<a href="{% url 'beauty_salon:login' %}">Войти</a>
+							<a href="{% url 'beauty_salon:login' %}" class="menu__item_link">Войти</a>
 						</div>
 						{% endif %}
 					</div>
